# TheCommittee

./: .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
docs/: A2A.md  ARCHITECTURE.md  BUILD_PLAN.md  BUILD_STATUS.md  DECISIONS.md  DEVELOPMENT.md  EVALUATION.md  MCP_SECURITY.md  ROADMAP.md  SCORING.md  SECURITY.md
evals/: decisions.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_debate_rounds.py  0003_outcome_memory.py  0004_outcome_feedback.py  0005_agent_roster.py
src/the_committee/: __init__.py  a2a_wallet.py  agents.py  api.py  chairperson.py  domain.py  evaluation.py  memory_mcp.py  model_agents.py  model_provider.py  observability.py  orchestration.py  outcomes.py  persistence.py
tests/: conftest.py  test_a2a_wallet.py  test_agents.py  test_api.py  test_chairperson.py  test_debate.py  test_domain.py  test_evaluation.py  test_memory_mcp.py  test_model_agents.py  test_model_provider.py  test_observability.py  test_orchestration.py  test_outcomes.py
