[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "the-committee"
version = "0.1.0"
description = "A multi-agent personal decision application"
requires-python = ">=3.12"
dependencies = [
  "a2a-sdk[http-server]>=1.1,<2",
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "mcp>=1.27,<2",
  "pydantic>=2.9,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "ruff>=0.7,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/the_committee"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["the_committee"]
mypy_path = "src"
